[gd_scene load_steps=8 format=3 uid="uid://cxe7i3skqp557"]

[ext_resource type="Script" path="res://player.gd" id="1_sk83r"]
[ext_resource type="PackedScene" uid="uid://dx8mucad4x6cv" path="res://projectile.tscn" id="2_k8n1b"]
[ext_resource type="Texture2D" uid="uid://bbv4trq6ck6y1" path="res://Assets/Player.png" id="2_yc3ni"]
[ext_resource type="PackedScene" uid="uid://7v2ufchuss4o" path="res://upgrades.tscn" id="4_vf6g3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7u32"]
size = Vector2(8, 6)

[sub_resource type="Gradient" id="Gradient_71uf1"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.957747, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yyo5i"]
gradient = SubResource("Gradient_71uf1")

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_sk83r")
projectileScene = ExtResource("2_k8n1b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yc3ni")

[node name="SpawnNode" type="Node2D" parent="Sprite2D"]
position = Vector2(0, -10)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x7u32")

[node name="TextEdit" type="Label" parent="."]
z_index = 1
offset_left = -193.0
offset_top = -108.0
offset_right = -131.0
offset_bottom = -82.0
text = "Score: "

[node name="Upgrades" parent="." instance=ExtResource("4_vf6g3")]
anchors_preset = 9
anchor_right = 0.0
offset_left = -178.0
offset_top = -73.0
offset_right = -178.0
offset_bottom = -73.0
grow_horizontal = 1

[node name="Level" type="Label" parent="."]
z_index = 1
offset_left = 40.0
offset_top = -108.0
offset_right = 89.0
offset_bottom = -85.0
text = "Level 1: "

[node name="LevelProgress" type="TextureProgressBar" parent="."]
z_index = 1
offset_left = 98.0
offset_top = -105.0
offset_right = 190.0
offset_bottom = -86.0
step = 0.0
rounded = true
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_yyo5i")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
